# financialcpp

./: .gitignore  CMakeLists.txt  LICENSE  README.md  package.json  readme.md
cpp/addon/src/: financial.cpp  financial.h
cpp/lib/src/: financial.hpp
js/: index.js
js/graphql/: index.js  resolvers.js  typeDefs.js
js/lib/: index.js
js/test/: graphql.js  lib.js
